# alfa-apps-garage

./: .gitignore  BUILD.md  CLAUDE.md  DEMARRAGE.md  RELEASE.md  UTILISATEURS.md  build.ps1  garage_app.spec  main.py  pyproject.toml
assets/styles/: light.qss
designDocs/00_Inception/: 02_sub_sprint_01_domain.md  03_sub_sprint_02_infrastructure.md  04_sub_sprint_03_presentation.md  05_sub_sprint_04_tools_reports.md  event_storming.md  sprint.md
designDocs/01_Sprint_Stock_Fournisseurs/: 01_sprint_stock_fournisseurs.md
designDocs/02_Sprint_Facturation_Caisse/: 01_sprint_facturation_caisse.md
designDocs/03_Multi_architecture_installer/: sprint.md
designDocs/04_Sprint_Fix_ActionRapide_Logo/: sprint.md
designDocs/05_Sprint_Numerotation_FacturesAchat_Charges/: 01_sprint_05.md
designDocs/06_Sprint_Guide_Utilisateur/: 01_sprint_06.md
designDocs/07_Sprint_Offres_Devis_ProForma/: 01_sprint_07.md
docs/: Guide_Utilisateur_GarageReparation.html
installer/: setup.iss
licences/: licence_keys.txt
resources/i18n/: garage_en.ts  garage_fr.ts
resources/seed/: seed_data.json
scripts/: download_dbbrowser.ps1  generate_licences.py  prepare_assets.py
src/garage_app/: __init__.py  bootstrap.py  dossier_manager.py  settings.py
tests/: conftest.py
tests/application/: test_audit_service.py  test_auth_service.py  test_db_management_service.py  test_dossier_service_ops.py  test_rbac_decorator.py  test_rendez_vous_service.py
tests/domain/: test_commande_fournisseur.py  test_dossier_reparation.py  test_facture.py  test_fournisseur.py  (+3 more)
tools/: generate_guide_pdf.py
(+186 files in other folders)
