[project]
name = "garage-reparation-voiture"
version = "1.0.0"
description = "Système de gestion d'un garage de réparation automobile — Alfa Computers Apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.7.0",
    "sqlalchemy>=2.0.36",
    "bcrypt>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
build = [
    "pyinstaller>=6.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
qt_api = "pyqt6"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
